valid_tests/declarations/test2.go
// Test 2: Constant declarations
func main() {
    const pi = 3.14159
    const x, y = 10, 20
    const z int = 42
    const a, b int = 100, 200
}
